--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
 	"name": "grunt-d-ts",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"homepage": "https://github.com/andraaspar/grunt-d-ts",
 	"authors": [
 		"András Parditka"
@@ -9,7 +9,7 @@
 	"keywords": [
 		"TypeScript",
 		"definitions",
-		"Node.js"
+		"Grunt"
 	],
 	"license": "MIT",
 	"ignore": [
